ロゴとfaviconを作成・適用
- 香りの波紋をモチーフにしたシンプルなロゴデザイン
- オレンジ系カラーでサイトテーマに統一
- ヘッダーと認証画面にロゴ適用
- faviconをロゴと同一デザインに統一

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FragFolio - 香水ポートフォリオ管理</title>
+    <meta name="description" content="fragfolio - あなたの香水コレクションを管理し、香りの記録を残すためのポートフォリオアプリケーション" />
+    <meta name="theme-color" content="#ea580c" />
+    <title>fragfolio - 香水ポートフォリオ管理</title>
   </head>
   <body>
     <div id="root"></div>
